--- a/my_ARfiles/complete/main-file/package.json
+++ b/my_ARfiles/complete/main-file/package.json
@@ -1,10 +1,10 @@
 {
   "name": "main-file",
   "version": "1.0.0",
-  "description": "",
+  "description": "Static HTML/CSS/JS site",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vercel-build": "echo 'No build needed'"
   },
   "keywords": [],
   "author": "",
